feat: data architecture optimization — shared context, learnings log, visualization
- dragons/shared-context.md: declassified MEMORY for all dragons
- dragons/shared-briefing.md: daily priorities and changes
- dragons/learnings-log.md: central long-term learnings
- mission-control/data-architecture.html: visual data flow diagram
- 9 cron jobs updated to read shared-context first
- Self-improvement loop formalized
- Dragon gender + hierarchy in protocol + data.json
- Pre-commit hook: fix false positive on 'Musk' matching sk- pattern

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -6,3 +6,67 @@
 - Fix: Removed all submodule refs from index, added folders to `.gitignore`
 - Commit `44c70cf` pushed, build should pass now
 - Affected paths: compliance-ai-demo, doc-form-automation-demo, jonny-lab-repo, mission-control, projects/0003_city-apps/poxdorf, projects/github-contributions/hive-n8n, projects/github-contributions/openagents-n8n, projects/hive-n8n-integration
+
+## Musk-Tweet Diskussion (07:31)
+- Dino fragte nach Einschätzung zu "AI zerstört Knappheits-Ökonomie" Tweet
+- Richtung stimmt, Timing übertrieben, für uns relevant: Wir sind die "systems generating unlimited output"
+
+## Edit-Verifikation als Pflicht eingeführt (07:41)
+- Caraxes Playbook: neuer Schritt 3.5 "Edit-Verifikation" — nach jedem Edit Datei lesen und verifizieren
+- Dragon Protocol: globale Pflicht für alle Drachen
+- Hintergrund: "Harness Problem" — Edit-Tool ist Bottleneck bei Coding Agents (Grok 4 = 50% Patch-Failure)
+
+## xAI API Key erneuert (08:07)
+- Neuer Key in `secrets/accounts.json` gespeichert (alter Key war revoked nach Git-Leak)
+- API-Test erfolgreich (grok-3-mini-fast antwortet)
+- Sicherheit: secrets/ in .gitignore + pre-commit hook aktiv
+
+## X/Twitter Lese-Workflow gelöst (08:30) ⭐⭐⭐
+- **fxtwitter API** ist die Lösung! `web_fetch https://api.fxtwitter.com/{user}/status/{id}`
+- Liest normale Tweets UND X Articles (Langform) → article.content.blocks[].text
+- 7-stufige Fallback-Kette in TOOLS.md dokumentiert
+- Fehler heute: Beim ersten Tweet nach 2 Versuchen aufgegeben statt Alternativen durchzugehen
+- REGEL: ALLE 7 Stufen durchgehen bevor Dino gefragt wird!
+
+## Steinberger-Podcast — 5-Punkte-Umsetzung (08:54) ⭐⭐⭐
+Lex Fridman #491 mit Peter Steinberger (OpenClaw Creator). Alle 5 Learnings umgesetzt:
+1. **Self-Awareness** → AGENTS.md: neuer Abschnitt "Was ich über mich selbst weiß" (Runtime, Files, Capabilities, Grenzen)
+2. **API-First Audit** → Dino gefragt welche Apps/Geräte er nutzt, neue Habit "API-First Denken" in AGENTS.md
+3. **Proaktivität spezifischer** → HEARTBEAT.md: "Steinberger-Prinzip" — Session-Kontext in Heartbeats nutzen
+4. **Security verstärkt** → dragon-protocol.md: 3 neue Regeln (Skill-Review, externe Inhalte skeptisch, neueste Modelle)
+5. **Skills sauber halten** → AGENTS.md: neue Habit "Installierte Skills reviewen" (wöchentlich)
+
+## YouTube Transkript-Workflow gelöst (08:36) ⭐⭐⭐
+- 5-stufige Fallback-Kette in TOOLS.md: summarize → yt-dlp+Cookies → summarize+yt-dlp → Services → Browser
+- **yt-dlp mit OpenClaw-Browser-Cookies** ist die zuverlässigste Methode (umgeht Bot-Detection)
+- Getestet mit Lex Fridman Podcast: 160k Zeichen, 31k Wörter — vollständig von Anfang bis Ende
+- Cookie-Pfad: `chrome:/Users/macmini001/.openclaw/browser/openclaw/user-data/Default`
+
+## Diamandis/Figure Artikel gelesen (08:39)
+- Peter Diamandis X Article: "Figure's General Purpose Robot: Why 2026 Changes Everything"
+- Figure Roboter: 67h autonome Arbeit, 1 Fehler. 109k Zeilen C++ durch ein Neural Net ersetzt (Helix 2)
+- Leasing $300/Monat = $0.40/h vs $15-20 Mindestlohn
+- Timeline: 2026 Alpha in Haushalten, 2028-29 Massenproduktion
+
+## xAI Key in OpenClaw Config aktualisiert (09:01)
+- Alter revoked Key war noch in openclaw.json als ENV-Var → Meleys Grok-Calls schlugen fehl
+- `gateway config.patch` mit neuem Key → Gateway Restart
+- Meleys nächste Patrol wird Grok wieder nutzen können
+
+## Meleys Recherche-Fähigkeiten optimiert (09:48) ⭐⭐
+- Meleys PLAYBOOK.md: Komplette X/Twitter + YouTube Fallback-Ketten hinzugefügt
+- Meleys Cron-Prompt: Verweist jetzt auf Playbook für Fallback-Ketten
+- Weekly AI Review Cron: Konkrete yt-dlp Befehle + Playbook-Verweis
+- Grund: Meleys lief als isolierte Session ohne Zugriff auf TOOLS.md
+
+## Drachen-Geschlechter eingetragen (09:50)
+- Alle Drachen in dragon-protocol.md + mission-control/data.json mit Geschlecht versehen
+- Balerion ♂, Caraxes ♂, Syrax ♀, Meleys ♀, Sunfyre ♂, Vermithrax ♂, Vhagar ♀
+- Vhagar als eigenen Eintrag im Protocol + Dashboard hinzugefügt (fehlte vorher)
+
+## Security Audit (08:00)
+- 0 CRITICAL, 1 WARN (trustedProxies — bekannt/irrelevant), 1 INFO
+- Medien-Welle über ~40k exponierte OpenClaw-Instanzen + 3 CVEs — betrifft uns NICHT
+
+## Offen: API-First Audit
+- Dino per DM gefragt welche Apps/Geräte er nutzt — Antwort steht noch aus
