feat: integrate data architecture into Mission Control Board
- Removed public data-architecture.html (now private in MC Board)
- Added to Dataflow tab: Shared Context System, Self-Improvement Loop,
  Vertical/Horizontal flows, Dragon Access Matrix
- All data visualization now in one place (not public)

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -68,5 +68,30 @@ Lex Fridman #491 mit Peter Steinberger (OpenClaw Creator). Alle 5 Learnings umge
 - 0 CRITICAL, 1 WARN (trustedProxies — bekannt/irrelevant), 1 INFO
 - Medien-Welle über ~40k exponierte OpenClaw-Instanzen + 3 CVEs — betrifft uns NICHT
 
+## Drachen-Hierarchie finalisiert (09:59)
+- Vermithrax auf Platz 3 geschoben (direkt unter Vhagar)
+- Reihenfolge: Dino → Balerion → Vhagar → Vermithrax → Syrax/Caraxes/Meleys/Sunfyre
+- Logik: Strategie → Geld → Qualität → Ausführung
+- Syrax und Caraxes bewusst gleichrangig (spielen zusammen auf Entwicklerseite)
+
+## Daten-Architektur optimiert (10:49) ⭐⭐⭐
+Dino's Anforderung: Datenflüsse optimieren, Langzeit-Learnings, Self-Improvement, Visualisierung.
+
+**3 neue Dateien:**
+- `dragons/shared-context.md` — Declassified MEMORY für alle Drachen (Regeln, Präferenzen, Setup)
+- `dragons/shared-briefing.md` — Tägliches Briefing (Prioritäten, Änderungen, Projekte) — Balerion pflegt
+- `dragons/learnings-log.md` — Zentrale Langzeit-Erkenntnisse aller Drachen (versioniert mit Status)
+
+**9 Cron-Jobs aktualisiert** — lesen jetzt shared-context + shared-briefing als erstes
+
+**Self-Improvement Loop formalisiert:**
+Drache arbeitet → Erkenntnis → Learnings Log → Balerion kuratiert → MEMORY → Shared Context → alle Drachen lernen → ↻
+
+**Visualisierung:**
+- `mission-control/data-architecture.html` — Hierarchie, Datenflüsse, Speicher, Self-Improvement Loop
+- Deployed auf GitHub Pages
+
+**Pre-commit Hook Fix:** "Musk" matchte `sk-[A-Za-z0-9]` false positive → Pattern auf `sk-[A-Za-z0-9]{20}` verschärft
+
 ## Offen: API-First Audit
 - Dino per DM gefragt welche Apps/Geräte er nutzt — Antwort steht noch aus
