fix: unblock mission-control from gitignore

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -88,8 +88,9 @@ Dino's Anforderung: Datenflüsse optimieren, Langzeit-Learnings, Self-Improvemen
 Drache arbeitet → Erkenntnis → Learnings Log → Balerion kuratiert → MEMORY → Shared Context → alle Drachen lernen → ↻
 
 **Visualisierung:**
-- `mission-control/data-architecture.html` — Hierarchie, Datenflüsse, Speicher, Self-Improvement Loop
-- Deployed auf GitHub Pages
+- Zuerst als separate `data-architecture.html` auf GitHub Pages deployed
+- Dino wollte es NICHT öffentlich → in Mission Control Board integriert (Dataflow-Tab)
+- Separate HTML gelöscht. Neue Sektionen im Board: Shared Context System, Self-Improvement Loop, Vertikale/Horizontale Flüsse, Zugriffs-Matrix
 
 **Pre-commit Hook Fix:** "Musk" matchte `sk-[A-Za-z0-9]` false positive → Pattern auf `sk-[A-Za-z0-9]{20}` verschärft
 
