auto: hourly sync 2026-02-13_13:01

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -94,5 +94,33 @@ Drache arbeitet → Erkenntnis → Learnings Log → Balerion kuratiert → MEMO
 
 **Pre-commit Hook Fix:** "Musk" matchte `sk-[A-Za-z0-9]` false positive → Pattern auf `sk-[A-Za-z0-9]{20}` verschärft
 
+## Mission Control Board — Lokaler Server (11:58) ⭐⭐
+- MC Board ist PRIVAT, nur lokal auf Mac Mini — NIEMALS auf öffentliches Repo pushen!
+- Erreichbar über: **http://192.168.178.91:8888/**
+- LaunchAgent `ai.jonny.mission-control` eingerichtet (Python HTTP Server, Port 8888, auto-start)
+- `mission-control/` hatte embedded `.git` → entfernt, .gitignore korrigiert
+- FEHLER: Hatte MC versehentlich aufs öffentliche GitHub Repo gepusht → sofort revertiert
+
+## Dev Loop: MC Board Update (12:04-12:09) ⭐⭐
+- Syrax → Test-Spec (10 Tests) → Caraxes → 3 Fixes → Vermithrax → 10/10 PASS
+- Fix 1: Drachen-Tab Hierarchie (Vermithrax auf Tier 2)
+- Fix 2: Geschlecht (♂/♀) in Pokémon-Karten
+- Fix 3: Tab-Button "Datenflüsse & Architektur"
+- Danach: Geschlechts-Symbole auf 18px vergrößert (Dino: waren zu klein)
+
+## LEARNING: CSS-Änderungen + Visuelles Testing (12:51) ⭐⭐⭐
+- 5 Versuche für ein simples "Symbol hochstellen" — Dino musste jedes Mal korrigieren
+- **Ursache 1:** `vertical-align: super` wirkt nicht in Flex-Containern → `position: relative; top: -0.5em;`
+- **Ursache 2:** Kein visuelles Testing gemacht, blind ausgeliefert
+- **Ursache 3:** Geraten statt Problem verstanden
+- **Dino's Feedback:** "Wie soll ich mit dir Geld verdienen" / "Ich kann nicht mehr, das ist mir zu blöd"
+- **NEUE REGELN (permanent!):**
+  1. Bei UI: Zuerst Layout-System verstehen (Flex? Grid? Block?)
+  2. **Visuelles Testing PFLICHT** bei jeder UI/CSS-Änderung — Browser-Screenshot VOR Lieferung
+  3. Bei Positionierung: Zoom 200%+ für Detail-Check
+  4. Test-Strategie RICHTIG wählen (visuell vs. grep vs. funktional)
+  5. Design-Spezifikation + Test-Spezifikation permanent aktualisieren
+- Eingebaut in: `references/testing-checklist.md`, `TEST-SPEC`, `REQUIREMENTS`, Habit in AGENTS.md
+
 ## Offen: API-First Audit
 - Dino per DM gefragt welche Apps/Geräte er nutzt — Antwort steht noch aus
