auto: hourly sync 2026-02-13_16:01

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -122,5 +122,17 @@ Drache arbeitet → Erkenntnis → Learnings Log → Balerion kuratiert → MEMO
   5. Design-Spezifikation + Test-Spezifikation permanent aktualisieren
 - Eingebaut in: `references/testing-checklist.md`, `TEST-SPEC`, `REQUIREMENTS`, Habit in AGENTS.md
 
+## Dino fragt nach Anthropic Investment (15:54)
+- Recherchiert: 6 Wege in Anthropic zu investieren
+- IPO möglicherweise H1 2026, Bewertung $380B
+- AGIX ETF (KraneShares) = einziger öffentlicher ETF mit direkter Anthropic-Beteiligung
+- Hiive = Secondary Market für Pre-IPO Shares (nur Accredited Investors)
+- Dino's Interesse an AI-Investments merken für zukünftige Empfehlungen
+
+## Meleys Freshness-Problem (13:02)
+- Dino beschwert sich: "Manche News sind alt, Anthropic hab ich gestern Abend schon gesehen"
+- Freshness-Regel in shared-briefing.md: NUR News < 3h als Top-Finding
+- Grok API blockiert (alter Key noch im ENV) — wird beim nächsten Restart behoben
+
 ## Offen: API-First Audit
 - Dino per DM gefragt welche Apps/Geräte er nutzt — Antwort steht noch aus
