auto: hourly sync 2026-02-13_17:00

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -134,5 +134,13 @@ Drache arbeitet → Erkenntnis → Learnings Log → Balerion kuratiert → MEMO
 - Freshness-Regel in shared-briefing.md: NUR News < 3h als Top-Finding
 - Grok API blockiert (alter Key noch im ENV) — wird beim nächsten Restart behoben
 
+## MiniMax M2.5 Analyse (16:00)
+- Dino fragte nach MiniMax M2.5 Tweet — neues Open-Source Frontier-Modell
+- SWE-Bench 80.2%, 37% schneller, $1/h bei 100 tps, 1/20 der Kosten von Opus
+- Schlägt Kimi K2.5 (bestes Open-Weight für Coding)
+- Besser als Sonnet 4.5, aber NICHT besser als Opus 4.6
+- Community: "Great Sonnet replacement, not Opus level in practice"
+- Dino's Entscheidung: "Wir sind nicht an Limits, gehen all-in" → Opus bleibt. M2.5 ist Option falls Limits kommen.
+
 ## Offen: API-First Audit
 - Dino per DM gefragt welche Apps/Geräte er nutzt — Antwort steht noch aus
