auto: hourly sync 2026-02-14_19:00

--- a/memory/2026-02-14.md
+++ b/memory/2026-02-14.md
@@ -33,7 +33,21 @@
 - 40% aller AI-Projekte werden bis 2027 gecancelt (ROI fehlt) → WorkflowAudit relevant
 - xAI API Key weiterhin gesperrt (Leak-Vorfall 13.02.) → Dino muss neuen generieren
 
+## Upwork Proposals eingereicht (4 Stück)
+- ✅ Autotrader.co.uk Scraper ($10 fixed, 13 Connects)
+- ✅ HLTV CS:GO Data Scraper ($30 fixed, 13 Connects)
+- ✅ Website Migration Norway ($90 fixed, Wayback Machine → GoDaddy)
+- Proposals-Datei: `projects/job-applications/upwork-proposals-2026-02-14.md`
+- Connects verbraucht: ~26+ (von 79 auf ~53)
+- Profil: 40% completion, 11 submitted proposals total auf Proposals-Seite
+- **Upwork-Status:** 0 Offers, 0 Active, 11 Submitted
+
+## Browser Relay Probleme
+- Chrome Relay wurde instabil gegen Abend — tabs sichtbar aber nicht steuerbar
+- Workaround: focus → navigate funktioniert manchmal, manchmal nicht
+- Dino gebeten Browser Relay Button zu toggeln
+
 ## Cron-Ergebnisse
 - Reddit Job Scanner: Keine Jobs (Samstag + Valentinstag + 429 Rate Limits)
-- Meleys Patrol: Keine News ≥8/10 für Thread
+- Meleys Patrol 18:00: xAI Mass Exodus (9 Engineers + 2 Co-Founder raus), VCs backing competitors, NYT "We're an AI Company Now"
 - Security Audit: Alles sauber, 2026.2.13 gepatcht
